<resources>
    <string name="app_name">Nessie</string>
    <string name="customer_bill_status_format">Status: %1$s</string>
    <string name="customer_bill_payee_format">Payee: %1$s</string>
    <string name="customer_bill_payment_date_format">Payment Date: %1$s</string>
    <string name="customer_bill_nickname_format">Nickname: %1$s</string>
    <string name="customer_bill_creation_date_format">Creation Date: %1$s</string>
    <string name="customer_bill_payment_amount_format">Payment Amount: $%1$s</string>
    <string name="customer_bill_recurring_date_format">Recurring Date: %1$s</string>
    <string name="customer_bill_upcoming_payment_date_format">Upcoming Payment Date: %1$s</string>
    <string name="atm_address_format_street">%1$s %2$s</string>
    <string name="atm_address_format_city">%1$s, %2$s %3$s</string>
    <string name="atm_money">$%1$s</string>
    <string name="rewards_format">Rewards: %1$s</string>
    <string name="balance_format">Balance: $%1$s</string>
    <string name="account_format">%1$s …%2$s</string>
    <string name="add_a_customer">Add a Customer</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="street_number">Street Number</string>
    <string name="street_name">Street Name</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="add_customer">Add Customer</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="radius">Radius</string>
    <string name="get_nearby_atms">Get Nearby ATMs</string>
    <string name="customer_account">Customer Account</string>
    <string name="atms">ATMs</string>
    <string name="find_pizza">Find Pizza</string>
    <string name="pizza_places">Pizza Places</string>
    <string name="amount_to_deposit">Amount to Deposit</string>
    <string name="deposit">Deposit</string>
    <string name="order_pizza_from_this_account">Order pizza from this account!</string>
    <string name="get_account_info">Get Account Info</string>
    <string name="add_account">Add Account</string>
    <string name="delete_all_accounts">Delete All Accounts</string>
    <string name="view_upcoming_bill">View Upcoming Bill</string>
    <string name="account_number">Account Number:</string>
    <string name="balance">Balance:</string>
    <string name="rewards">Rewards:</string>
    <string name="account_nickname">Account Nickname:</string>
    <string name="add_a_credit_card">Add a Credit Card</string>
    <string name="atm_invalid_input">Please input your latitude, longitude, and radius</string>
</resources>
