<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
                name="customer"
                type="org.hacking.nessieproj.models.Customer"/>
        <variable
                name="converter"
                type="org.hacking.nessieproj.Converter"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:id="@+id/main_layout"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">
        <TextView
                style="@style/Header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/add_a_customer"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">
            <EditText
                    android:id="@+id/customer_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/first_name"
                    android:text="@={customer.firstName}"/>
            <EditText
                    android:id="@+id/customer_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/last_name"
                    android:text="@={customer.lastName}"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">
            <EditText
                    android:id="@+id/customer_street_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/street_number"
                    android:inputType="number"
                    android:text="@={customer.address.streetNumber}"/>
            <EditText
                    android:id="@+id/customer_street_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/street_name"
                    android:text="@={customer.address.streetName}"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:paddingStart="8dp">
            <EditText
                    android:id="@+id/customer_city"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/city"
                    android:text="@={customer.address.city}"/>
            <EditText
                    android:id="@+id/customer_state"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/state"
                    android:text="@={customer.address.state}"/>
            <EditText
                    android:id="@+id/customer_zip"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/zip_code"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:text="@={customer.address.zip}"/>
        </LinearLayout>
        <Button
                android:id="@+id/add_customer"
                style="@style/NessieButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_customer"/>
    </LinearLayout>
</layout>