<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/atm_layout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">
    <EditText
            android:id="@+id/lat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/latitude"
            android:inputType="numberDecimal|numberSigned"/>
    <EditText
            android:id="@+id/lng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/longitude"
            android:inputType="numberDecimal|numberSigned"/>
    <EditText
            android:id="@+id/radius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radius"
            android:imeOptions="actionDone"
            android:inputType="number"/>
    <Button
            android:id="@+id/get_atms_btn"
            style="@style/NessieButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_nearby_atms"/>
    <android.support.v7.widget.RecyclerView
            android:id="@+id/atm_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>